--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.background": "#1B2C51",
-    "titleBar.activeBackground": "#253E72",
-    "titleBar.activeForeground": "#FBFCFE"
+    "activityBar.background": "#3D1570",
+    "titleBar.activeBackground": "#551E9C",
+    "titleBar.activeForeground": "#FCFAFE"
   }
 }
