--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_application_20",
-    "short_name": "flutter_application_20",
+    "name": "rfw_pad",
+    "short_name": "rfw_pad",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
